--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Redirecting to Vercel...</title>
+    <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=https://skabongo-github-io.vercel.app">
     <link rel="canonical" href="https://skabongo-github-io.vercel.app">
     <style>
@@ -11,9 +11,10 @@
             text-align: center;
             padding: 50px;
             background-color: #f5f5f5;
+            margin: 0;
         }
         .container {
-            max-width: 600px;
+            max-width: 400px;
             margin: 0 auto;
             background: white;
             padding: 30px;
@@ -21,12 +22,12 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
         .spinner {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #3498db;
+            border: 3px solid #f3f3f3;
+            border-top: 3px solid #3498db;
             border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 2s linear infinite;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
             margin: 20px auto;
         }
         @keyframes spin {
@@ -45,16 +46,17 @@
 </head>
 <body>
     <div class="container">
-        <h2>Redirecting to New Site...</h2>
+        <h3>Redirecting...</h3>
         <div class="spinner"></div>
-        <p>You are being redirected to the new location of this site.</p>
         <p>If you are not redirected automatically, <a href="https://skabongo-github-io.vercel.app" class="redirect-link">click here</a>.</p>
-        <p><small>This site has moved to Vercel for better performance.</small></p>
     </div>
     
     <script>
-        // Immediate redirect
-        window.location.replace("https://skabongo-github-io.vercel.app");
+        // Check if we're already on the target domain to prevent loops
+        if (window.location.hostname !== 'skabongo-github-io.vercel.app') {
+            // Immediate redirect with replace to prevent back button issues
+            window.location.replace("https://skabongo-github-io.vercel.app");
+        }
     </script>
 </body>
 </html>
